--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,5 @@
-baseURL = "http://example.org/"
+baseURL = "https://blueturtle.blog/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "blue turtle blog"
+PygmentsCodeFences = true
+pygmentsStyle = "monokai"
