--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,7 @@ languageCode = "en-us"
 title = "blue turtle blog"
 PygmentsCodeFences = true
 pygmentsStyle = "monokai"
+[sitemap]
+  changefreq = "monthly"
+  filename = "sitemap.xml"
+  priority = 0.5
